--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ svg {
 
 /* Hero Section */
 #hero {
-  background-image: url(/assets/img/hero-bg.png);
+  background-image: url("https://riz-folio.github.io/assets/img/hero-bg.png");
   background-size: cover;
   background-position: top center;
   position: relative;
