--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ svg {
 
 /* Hero Section */
 #hero {
-  background-image: url("https://github.com/Rizaszs/riz-folio/blob/master/assets/img/hero-bg.png");
+  background-image: url("https://rizaszs.github.io/riz-folio/assets/img/hero-bg.png");
   background-size: cover;
   background-position: top center;
   position: relative;
